# terminusdb-store

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  appveyor.yml
.github/: pull_request_template.md
.github/workflows/: benchmark.yml  coverage.yml  other_platforms.yml  rust.yml  test.yml
benches/: bench.rs  logarray.rs
benches/builder/: data.rs  main.rs
ci/: linux_build.sh  osx_build.sh
dev/bench/: data.js
docs/: CONTENT.md  GARBAGE.md  LEXICAL.md  ROADMAP.md
examples/: create_graph.rs  print_graph.rs  write_to_graph.rs
src/: lib.rs  store.rs
src/layer/: base.rs  builder.rs  child.rs  consts.rs  delta.rs  delta_rollup.rs  id_map.rs  internal.rs  layer.rs  mod.rs  rollup.rs  simple_builder.rs  storage.rs
src/layer/internal/: asdfadsf  base.rs  base_merge.rs  blank_range.rs  child.rs  mod.rs  object_iterator.rs  predicate_iterator.rs  rollup.rs  subject_iterator.rs
src/logging/: logging.rs  mod.rs
src/storage/: archive.rs  cache.rs  consts.rs  copy.rs  delta.rs  directory.rs  file.rs  label.rs  layer.rs  locking.rs  memory.rs  mod.rs  new_memory.rs  pack.rs  store.rs
src/store/: mod.rs  sync.rs
src/structure/: adjacencylist.rs  bitarray.rs  bitindex.rs  bititer.rs  indexed_property.rs  logarray.rs  mapped_dict.rs  mod.rs  pfc.rs  sharedbuf.rs  smallbitarray.rs  storage.rs  tfc.rs  util.rs  vbyte.rs  wavelettree.rs
src/structure/tfc/: block.rs  datatypes.rs  datetime.rs  decimal.rs  dict.rs  file.rs  integer.rs  mod.rs  stream.rs  typed.rs
src/sync/: builder.rs  label.rs  layer.rs  mod.rs  store.rs
src/sync/store/: layer.rs
