[package]
name = "terminus-store"
version = "0.7.6"
authors = ["Matthijs van Otterdijk <matthijs@datachemist.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "a triple store library"
homepage = "https://terminusdb.com"
repository = "https://github.com/terminusdb/terminus-store/"
documentation = "https://docs.rs/terminus-store/"

[dependencies]
byteorder = "1.3.2"
futures = "0.1.29"
futures-locks = "0.4"
tokio = "0.1.22"
tokio-io = "0.1.12"
bytes = "0.4.12"
memmap = "0.7"
rand = "0.7"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.1"
