[package]
name = "terminus-store"
version = "0.14.0"
authors = ["Matthijs van Otterdijk <matthijs@datachemist.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "a triple store library"
homepage = "https://terminusdb.com"
repository = "https://github.com/terminusdb/terminus-store/"
documentation = "https://docs.rs/terminus-store/"

[dependencies]
byteorder = "1.3.2"
futures = "0.3"
futures-locks = "0.6"
tokio = {version = "0.2", features = ["full"]}
tokio-util = {version = "0.3", features = ["codec"]}
bytes = "0.5.0"
rand = "0.7"
lazy_static = "1.4"
fs2 = "0.4.3"
tar = "0.4"
flate2 = "1.0"
rayon = "1.4"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.1"