[package]
name = "terminus-store"
version = "0.19.9"
authors = ["Matthijs van Otterdijk <matthijs@datachemist.com>"]
edition = "2018"
license = "Apache-2.0"
description = "a triple store library"
homepage = "https://terminusdb.com"
repository = "https://github.com/terminusdb/terminusdb-store"
documentation = "https://docs.rs/terminus-store/"
exclude = [".gitignore", ".github/", "/ci/"]

[dependencies]
byteorder = "1.4"
futures = "0.3"
futures-locks = "0.7"
tokio = {version = "1.0", features = ["full"]}
tokio-util = {version = "0.6", features = ["codec"]}
bytes = "1.0"
rand = "0.8"
lazy_static = "1.4"
fs2 = "0.4.3"
tar = "0.4"
flate2 = "1.0"
rayon = "1.4"
thiserror = "1.0"
async-trait = "0.1"
itertools = "0.10"
rug = {version="1.16", default-features=false, features=["integer","rational"]}
num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
tempfile = "3.1"
regex = "1.5"

[features]
noreadlock = []